
	* 0.9.6 Minor bugfixes:
		+ added Latvian translation.
		+ Eamon Millman fixed the way xCHM treated '&' characters in
		URLs.
		+ fixed a TOC bug.

	* 0.9.7 Minor bugfixes:
		+ added ListDirty() optimization hack from Iulian Dragos
		<dragosiulian@users.sourceforge.net>
		+ now the index list is being sorted.

	* 0.9.8 Minor feature enhancements:
		+ fixed the German translation.
		+ added 'Copy link location' to the right-click menu.
		
	* 1.0 Finally 'the release':
		+ now xCHM only compiles with wxWidgets 2.6.0.
		+ text selection and copy/paste operations are available.
		+ searching in page with Ctrl+F is possible.
		+ changed the protocol prefix to 'xchm:' to avoid conflicts
		with the wxWindows-integrated chm support.
		+ improved CHM load times and UI usability during loading.

	* 1.1 Feature enhancements:
		+ tw translation added.
		+ fixed (wxWidgets bug?) bookmarks save on exit bug.
		+ applied patch from Fritz Elfert for <SPAN> tag support and
		better icons for the contents tree control items.

	* 1.2 Feature enhancements:
		+ added Chinese translation.
		+ improved CHM language detection support.
		+ fixed Cyrillic character mapping in Unicode builds.
		 
	* 1.3:
		+ added Czech translation.
		+ added Slovak translation.
		+ updated Russian translation.
		+ updated French translation.
		+ removed useless mouse scroll patch for Mac OS X.
		+ fixed the About dialog on Mac OS X.
		+ fixed the HTML link to Pabs' chmspec page.
		+ now allowing the 'back' button to get to the welcome page.
		+ the code compiles on Win32 with MinGW without patches
		+ added Win32 resource and icon files
		+ applied GCC 4.1 related patch

	* 1.4:
		+ fixed Polish translation.
		+ fixed command line relative path problem.
		+ the build scripts are MinGW32-friendly.
		+ fixed Windows CHM input stream bug.

	* 1.5:
		+ fixed booksmark selection bug.
		+ fixed Mac OS X locale warning.
		+ now text can be copied with ctrl(or cmd, on Mac)-C.
