@@ -1,5 +1,5 @@
 PIXMAPS = xchm-16.xpm xchm-32.xpm xchm-48.xpm xchm-128.xpm xchmdoc-16.xpm \
-	xchmdoc-32.xpm xchmdoc-48.xpm xchmdoc-128.xpm
+	xchmdoc-32.xpm xchmdoc-48.xpm xchmdoc-128.xpm copy.xpm
 
 EXTRA_DIST = *.xpm
 
