@@ -1,0 +1,44 @@
+/* XPM */
+static char *copy_xpm[] = {
+/* columns rows colors chars-per-pixel */
+"16 15 23 1",
+"o c #97C4E7",
+"* c #FFFFFF",
+"@ c #60A9DA",
+"= c #D1E5F5",
+"& c #C3DDF1",
+". c #7EA6C0",
+"  c None",
+"X c #2F93CD",
+"O c #85BBE2",
+", c #EFF6FC",
+"; c #DEEDF8",
+"+ c #72B2DD",
+"3 c #F7FBFD",
+"4 c #FAFCFE",
+": c #DAEAF7",
+"< c #E9F3FA",
+"1 c #E2EFF8",
+"- c #FDFDFE",
+"% c #B6D5EE",
+"$ c #A5CCEA",
+"> c #E5F0F9",
+"# c #AFD1EC",
+"2 c #F4F9FD",
+/* pixels */
+" .....XX        ",
+" .oO+@X#X       ",
+" .$oO+X##X      ",
+" .%$o........   ",
+" .&%$.*=&#o.-.  ",
+" .=&%.*;=&#.--. ",
+" .:=&.*>;=&.... ",
+" .>:=.*,>;=&#o. ",
+" .<1:.*2,>:=&#. ",
+" .2<1.*32,>:=&. ",
+" .32<.*432,>:=. ",
+" .32<.*-432,>:. ",
+" .....**-432,>. ",
+"     .***-432,. ",
+"     .......... "
+};
